# AdventOfCode

./: .gitignore  Cargo.toml  MainTemplate.rs
AdventOfCode_2020/day1/: Cargo.toml
AdventOfCode_2020/day1/src/: main.rs
AdventOfCode_2020/day10/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day11/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day12/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day13/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day14/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day15/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day16/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day17/: Cargo.toml
AdventOfCode_2020/day17/src/: main.rs  p1.rs  p2.rs  temp
AdventOfCode_2020/day18/src/: dummy4.txt  main.rs  p1.rs  p2.rs  temp.txt
AdventOfCode_2020/day19/: Cargo.toml
AdventOfCode_2020/day19/src/: dummy_simplified.txt  dummy_trivial2.txt  dummy_trivial3.txt  dummy_trivial4.txt  dummy_trivial5.txt  main.rs  p1 copy.rs  p1.rs
AdventOfCode_2020/day2/: Cargo.toml
AdventOfCode_2020/day2/src/: main.rs
AdventOfCode_2020/day20/src/: p1.rs
AdventOfCode_2020/day21/src/: main.rs  p1.rs  p2.rs
AdventOfCode_2020/day22/src/: main.rs  (+3 more)
AdventOfCode_2020/day5/: README.txt
AdventOfCode_2021/: MainTemplate.txt
AdventOfCode_2022/: Main Template.txt
AdventOfCode_2022/day10/: Cargo.toml
AdventOfCode_2022/day12/: Cargo.toml
AdventOfCode_2022/day13/: Cargo.toml
AdventOfCode_2022/day18/: Cargo.toml
AdventOfCode_2022/day21/: main.rs
AdventOfCode_2022/day24/: Cargo.toml
AdventOfCode_2023/day15/: Cargo.toml
AdventOfCode_2023/day18/: output - Copy.txt  output.txt
Tools/: search_tools.rs
tools/src/: lib.rs
(+143 files in other folders)
