[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
"./AdventOfCode_2020/day1",
"./AdventOfCode_2020/day2",
"./AdventOfCode_2020/day3",
"./AdventOfCode_2020/day4",
"./AdventOfCode_2020/day5",
"./AdventOfCode_2020/day6",
"./AdventOfCode_2020/day7",
"./AdventOfCode_2020/day8",
"./AdventOfCode_2020/day9",
"./AdventOfCode_2020/day10",
"./AdventOfCode_2020/day11",


# "./AdventOfCode_2021/day1",
# "./AdventOfCode_2021/day2",
# "./AdventOfCode_2021/day3",
# "./AdventOfCode_2021/day4",

# "./AdventOfCode_2022/day1",
# "./AdventOfCode_2022/day2",
# "./AdventOfCode_2022/day3",
# "./AdventOfCode_2022/day4",
# "./AdventOfCode_2022/day5",
# "./AdventOfCode_2022/day6",
# "./AdventOfCode_2022/day7",
# "./AdventOfCode_2022/day8",
# "./AdventOfCode_2022/day9",
# "./AdventOfCode_2022/day10",
# "./AdventOfCode_2022/day11",
# "./AdventOfCode_2022/day12",
# "./AdventOfCode_2022/day13",
# # "./AdventOfCode_2022/day14",
# "./AdventOfCode_2022/day15",
# "./AdventOfCode_2022/day16",
# "./AdventOfCode_2022/day17",
# "./AdventOfCode_2022/day18",
# "./AdventOfCode_2022/day19",
# "./AdventOfCode_2022/day20",
# "./AdventOfCode_2022/day21",
# "./AdventOfCode_2022/day22",
# "./AdventOfCode_2022/day23",
# "./AdventOfCode_2022/day24",
# "./AdventOfCode_2022/day25",
"./tools",
]
[[bin]]
name = "AdventOfCode"
path = "src/main.rs"

[dependencies]
tools = { path = "./tools" }